# fb-ask-pass-rs

./: .travis.yml  Cargo.toml  README.md
arch/: PKGBUILD  initcpio.hook  initcpio.install
src/: cli.rs  drawing.rs  main.rs  passwd.rs
